--- a/config/_default/hugo.toml
+++ b/config/_default/hugo.toml
@@ -14,7 +14,7 @@ disablePathToLower = true
 # Required if you want to render robots.txt template
 enableRobotsTXT = true
 enableGitInfo = true
-geekdocRepo = "https://github.com/oracle-japan/ocitutorials"
+geekdocRepo = "https://yskoka.github.io/tutorialtest7/"
 disableKinds = ["taxonomy", "term"]
 
 # Needed for mermaid shortcodes
